--- a/SPRNetToolTest/ArtWizTest.csproj
+++ b/SPRNetToolTest/ArtWizTest.csproj
@@ -12,6 +12,7 @@
 		<PlatformTarget>$(Platform)</PlatformTarget>
 		<Platforms>x64;x86</Platforms>
 		<BuildTag>ARTWIZ_TEST_BUILD_TAG</BuildTag>
+		<WizMachineVersion>1.0.16</WizMachineVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="Resources\1.bin" />
@@ -80,7 +81,11 @@
 		<PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
 		<PackageReference Include="coverlet.collector" Version="3.2.0" />
 	</ItemGroup>
-
+	<ItemGroup Condition="'$(Platform)' == 'x64'">
+		<DezonePackageReference Include="WizMachinex64" Version="$(WizMachineVersion)" />
+		<PackageReference Include="WizMachinex64" Version="$(WizMachineVersion)" />
+	</ItemGroup>
+	
 	<ItemGroup>
 		<ProjectReference Include="..\SPRNetTool\ArtWiz.csproj" />
 	</ItemGroup>
