--- a/SPRNetToolTest/ArtWizTest.csproj
+++ b/SPRNetToolTest/ArtWizTest.csproj
@@ -12,10 +12,8 @@
 		<PlatformTarget>$(Platform)</PlatformTarget>
 		<Platforms>x64;x86</Platforms>
 		<BuildTag>ARTWIZ_TEST_BUILD_TAG</BuildTag>
+		<WizMachineVersion>1.0.16</WizMachineVersion>
 	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="DezoneBuildPlugin" Version="8.4.0" />
-	</ItemGroup>
 	<ItemGroup>
 		<None Remove="Resources\1.bin" />
 		<None Remove="Resources\1.png" />
@@ -33,10 +31,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ContentWithTargetPath Include="..\libs\engine.dll">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-			<TargetPath>engine.dll</TargetPath>
-		</ContentWithTargetPath>
 		<Content Include="Resources\1.bin">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
@@ -83,10 +77,7 @@
 		<PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
 		<PackageReference Include="coverlet.collector" Version="3.2.0" />
 	</ItemGroup>
-
-	<ItemGroup Condition="'$(Platform)' == 'x64'">
-		<PackageReference Include="WizMachinex64" Version="1.0.0.0" />
-	</ItemGroup>
+	
 	<ItemGroup>
 		<ProjectReference Include="..\SPRNetTool\ArtWiz.csproj" />
 	</ItemGroup>
@@ -96,5 +87,7 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="DezoneBuildPlugin" Version="8.7.0" />
+	</ItemGroup>
 </Project>
