--- a/.github/workflows/sam-arc.yml
+++ b/.github/workflows/sam-arc.yml
@@ -60,7 +60,7 @@ jobs:
              (
              echo @echo off
              echo %samPath% init --sam-dir %samDir%
-             echo dotnet clean ${{ env.CS_VERSION_UP_FILE_PATH }} -c Release /p:Platform=x64 /p:GitToken=${{ env.GITHUB_TOKEN }} /p:IsFromDotnet=true
+             echo dotnet clean ${{ env.CS_VERSION_UP_FILE_PATH }} -c Release /p:Platform=x64 /p:GitToken=${{ env.GITHUB_TOKEN }} /p:IsFromDotnet=true /p:DezoneAdminToken=${{ secrets.WORK_FLOW_ACCESS_TOKEN }} /p:ShouldResolveDezonePkgReferences=none /p:DezoneResourceKey=${{ secrets.DEZ_CLIENT_RES_KEY }} /p:ShouldSkipDezVersionCheck=true
              echo %samPath% scan --sam-dir %samDir% --source-path %projectPath% --language cs dotnet build ${{ env.CS_VERSION_UP_FILE_PATH }} -c Release /p:Platform=x64 /p:GitToken=${{ env.GITHUB_TOKEN }} /p:IsFromDotnet=true
              echo %samPath% analyze --sam-dir %samDir% --source-path %projectPath% --language cs 
              echo %samPath% calculate --sam-dir %samDir% --source-path %projectPath% --language cs --scoring-metrics cc,dc,mcd,cbo,loc,ncs
